# serializer version: 1
# name: test_delete_devices[with_device]
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="row">
              <div class="col-6">
                  <div class="c-box">
                      <h2>
                          Mes appareils
                      </h2>
                      <form method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <p>
                              Voici la liste de vos appareils configurés :
                          </p>
                          <table class="table table-sm">
                              <caption class="visually-hidden">
                                  Liste de vos appareils configurés
                              </caption>
                              <thead>
                                  <tr>
                                      <th scope="col">
                                      </th>
                                      <th scope="col">
                                          Nom
                                      </th>
                                      <th scope="col">
                                          Créé le
                                      </th>
                                      <th scope="col">
                                          Dernière utilisation
                                      </th>
                                      <th scope="col">
                                          Supprimer
                                      </th>
                                  </tr>
                              </thead>
                              <tbody>
                                  <tr>
                                      <td>
                                          <i class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                          </i>
                                      </td>
                                      <td>
                                          bitwarden
                                      </td>
                                      <td>
                                          11 mars 2025 06:18
                                      </td>
                                      <td>
                                          11 mars 2025 06:20
                                      </td>
                                      <td>
                                          <button aria-label="Supprimer l’appareil bitwarden" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device_1]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                              <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                              </i>
                                          </button>
                                      </td>
                                  </tr>
                                  <tr>
                                      <td>
                                      </td>
                                      <td>
                                          authenticator
                                      </td>
                                      <td>
                                          11 mars 2025 06:19
                                      </td>
                                      <td>
                                          <i class="text-disabled">
                                              jamais
                                          </i>
                                      </td>
                                      <td>
                                          <button aria-label="Supprimer l’appareil authenticator" class="btn btn-sm btn-link text-danger" data-bs-target="#delete_[PK of device_2]_modal" data-bs-toggle="modal" type="button">
                                              <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                              </i>
                                          </button>
                                      </td>
                                  </tr>
                              </tbody>
                          </table>
                          <button class="btn btn-block btn-primary" name="action" type="submit" value="new">
                              Configurer un
                                  nouvel
                                  appareil
                          </button>
                          <div aria-hidden="true" class="modal fade" id="delete_[PK of device_1]_modal" tabindex="-1">
                              <div class="modal-dialog modal-dialog-centered">
                                  <div class="modal-content">
                                      <div class="modal-header">
                                          <h3 class="modal-title">
                                              Êtes-vous sûr de vouloir supprimer l'appareil bitwarden ?
                                          </h3>
                                      </div>
                                      <div class="modal-body">
                                          <p>
                                              Cet appareil est celui que vous avez utilisé pour vous connecter.
                                          </p>
                                          <p>
                                              Si vous le supprimez, vous devrez immédiatement confirmer votre identité avec un des autres appareils que vous avez enregistré.
                                          </p>
                                          <p>
                                              Cette action est irréversible.
                                          </p>
                                      </div>
                                      <div class="modal-footer">
                                          <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">
                                              Retour
                                          </button>
                                          <button aria-label="Supprimer l’appareil bitwarden" class="btn btn-sm btn-danger" name="delete-device" value="[PK of device_1]">
                                              Confirmer la suppression
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                          <div aria-hidden="true" class="modal fade" id="delete_[PK of device_2]_modal" tabindex="-1">
                              <div class="modal-dialog modal-dialog-centered">
                                  <div class="modal-content">
                                      <div class="modal-header">
                                          <h3 class="modal-title">
                                              Êtes-vous sûr de vouloir supprimer l'appareil authenticator ?
                                          </h3>
                                      </div>
                                      <div class="modal-body">
                                          <p>
                                              Cette action est irréversible.
                                          </p>
                                      </div>
                                      <div class="modal-footer">
                                          <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">
                                              Retour
                                          </button>
                                          <button aria-label="Supprimer l’appareil authenticator" class="btn btn-sm btn-danger" name="delete-device" value="[PK of device_2]">
                                              Confirmer la suppression
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
# name: test_devices[no_device]
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="row">
              <div class="col-6">
                  <div class="c-box">
                      <h2>
                          Mes appareils
                      </h2>
                      <form method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <p>
                              Vous n'avez pas configuré d'appareil OTP.
                          </p>
                          <button class="btn btn-block btn-primary" name="action" type="submit" value="new">
                              Configurer un
                                  
                                  appareil
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
# name: test_devices[with_device]
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="row">
              <div class="col-6">
                  <div class="c-box">
                      <h2>
                          Mes appareils
                      </h2>
                      <form method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <p>
                              Voici la liste de vos appareils configurés :
                          </p>
                          <table class="table table-sm">
                              <caption class="visually-hidden">
                                  Liste de vos appareils configurés
                              </caption>
                              <thead>
                                  <tr>
                                      <th scope="col">
                                      </th>
                                      <th scope="col">
                                          Nom
                                      </th>
                                      <th scope="col">
                                          Créé le
                                      </th>
                                      <th scope="col">
                                          Dernière utilisation
                                      </th>
                                      <th scope="col">
                                          Supprimer
                                      </th>
                                  </tr>
                              </thead>
                              <tbody>
                                  <tr>
                                      <td>
                                          <i class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                          </i>
                                      </td>
                                      <td>
                                          Mon appareil
                                      </td>
                                      <td>
                                          11 mars 2025 06:18
                                      </td>
                                      <td>
                                          11 mars 2025 06:18
                                      </td>
                                      <td>
                                          <button aria-label="Supprimer l’appareil Mon appareil" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                              <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                              </i>
                                          </button>
                                      </td>
                                  </tr>
                              </tbody>
                          </table>
                          <button class="btn btn-block btn-primary" name="action" type="submit" value="new">
                              Configurer un
                                  nouvel
                                  appareil
                          </button>
                          <div aria-hidden="true" class="modal fade" id="delete_[PK of device]_modal" tabindex="-1">
                              <div class="modal-dialog modal-dialog-centered">
                                  <div class="modal-content">
                                      <div class="modal-header">
                                          <h3 class="modal-title">
                                              Êtes-vous sûr de vouloir supprimer l'appareil Mon appareil ?
                                          </h3>
                                      </div>
                                      <div class="modal-body">
                                          <p>
                                              Cette action est irréversible.
                                          </p>
                                      </div>
                                      <div class="modal-footer">
                                          <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">
                                              Retour
                                          </button>
                                          <button aria-label="Supprimer l’appareil Mon appareil" class="btn btn-sm btn-danger" name="delete-device" value="[PK of device]">
                                              Confirmer la suppression
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
